# rvinci

./: .gitignore  README.md  pyproject.toml
.agent/rules/: 00-rvinci-constitution.md  10-rvinci-deep-knowledge.md
.agent/skills/rvinci-docs/: SKILL.md
.agent/skills/rvinci-run/: SKILL.md
.agent/workflows/: scaffold_projects.md  scaffold_skill.md
docs/: architecture.md  data_registry.md  dev_env.md  model_registry.md  porting.md  rules.md  runs_and_artifacts.md  testing.md
src/rvinci/core/: config.py  logging.py
src/rvinci/libs/gstreamer/: utils.py
src/rvinci/libs/inference/: jetson_detector.py  optimization.py
src/rvinci/libs/utils/: coco.py  video.py
src/rvinci/libs/vision_data/: analysis.py  coco_dataset.py  coco_instance_dataset.py  constants.py  converters.py  filtering.py  processing.py  splitting.py
src/rvinci/libs/visualization/: drawing.py  palette.py  plots.py  plotting.py
src/rvinci/projects/dinov3_inf/: README.md  cli.py
src/rvinci/projects/imitation_control/: README.md  cli.py  generate_dataset.py  train_imitation.py  visualize_masks.py
src/rvinci/projects/sam3_inf/: README.md  cli.py
src/rvinci/projects/sam3_pipeline/: README.md  cli.py
src/rvinci/projects/spot_data/: README.md  cli.py
src/rvinci/projects/spot_data_collection/: README.md  cli.py
tests/core/: test_sanity.py
tests/data/: gt.json  preds.json  preds_dup.json
tests/integration/: test_analysis_pipeline.py  test_coco_tools_manual.py  test_error_vis.py  test_filter_coco.py  test_rotation.py  test_vis_comparison.py
tests/libs/utils/: test_coco.py
(+83 files in other folders)
