[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rvinci"
version = "0.1.0"
description = "A modular monorepo for deep-learning-based robotics skills."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "opencv-python",
    "Pillow",
    "pycocotools",
    "joblib",
    "tqdm",
    "matplotlib",
    "pydantic",
    "hydra-core",
    "omegaconf",
    "torch",
    "torchvision",
    "vggt",
    "lark",
    "transformers>=5.2.0",
    "torch-tensorrt>=2.9.0",
    "accelerate>=1.12.0",
]

[dependency-groups]
dev = ["pytest"]

[tool.uv.sources]
vggt = { git = "https://github.com/facebookresearch/vggt.git" }

[project.scripts]
rvinci-legacy = "rvinci.projects.vision_suite_legacy.cli:main"

[project.optional-dependencies]
spot = [
    "bosdyn-client>=5.1.1",
    "bosdyn-core>=5.1.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
markers = [
  "integration: component-level integration tests",
  "e2e: end-to-end CLI tests",
  "gpu: requires CUDA/GPU",
  "robot: requires robot SDK/hardware",
]
